# flight-computer

./: Cargo.toml  generate_data.py  generate_data2.py
src/: lib.rs  main.rs  sensors.rs
