[package]
name = "rp-alloc"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "critical-section-impl",
] }
embedded-alloc = "0.6.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
flight-builder = { git = "https://github.com/purdue-orbital/flight-builder.git", default-features = false, features = [
    "cortex-m",
] }
